--- a/app/src/main/res/layout/tracked_book_list_content.xml
+++ b/app/src/main/res/layout/tracked_book_list_content.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.bdero.bulibraryreserves.BookListActivity"
-    tools:showIn="@layout/activity_book_list">
+    tools:context="com.example.bdero.bulibraryreserves.TrackedBookListActivity"
+    tools:showIn="@layout/tracked_book_list_activity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/book_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_book_list"></android.support.v7.widget.RecyclerView>
+        tools:listitem="@layout/tracked_book_list_item"></android.support.v7.widget.RecyclerView>
 
     <!-- The empty view will remind people to subscribe to books if there aren't any-->
     <TextView
