--- a/app/src/main/res/layout/tracked_book_list_item.xml
+++ b/app/src/main/res/layout/tracked_book_list_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
@@ -33,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/colorPrimaryLight"
         android:textSize="14sp"
