--- a/app/src/main/res/layout/tracked_book_list_activity.xml
+++ b/app/src/main/res/layout/tracked_book_list_activity.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            android:background="?android:attr/colorPrimary"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -30,6 +30,6 @@
         android:layout_margin="@dimen/fab_margin"
         android:tint="@android:color/background_light"
         app:fabSize="normal"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        app:srcCompat="@drawable/ic_plus_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
