--- a/app/src/main/res/layout/tracked_book_list_item.xml
+++ b/app/src/main/res/layout/tracked_book_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="84dp">
+    android:layout_height="108dp">
 
     <TextView
         android:id="@+id/tv_book_title"
@@ -41,5 +41,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_book_title"
         tools:text="Class Name, Prof. Name" />
+
+    <ImageView
+        android:id="@+id/im_availability_indicator"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:adjustViewBounds="false"
+        android:padding="2dp"
+        android:tint="@android:color/holo_green_light"
+        app:layout_constraintBottom_toTopOf="@+id/tv_availability_note"
+        app:layout_constraintEnd_toEndOf="@+id/tv_availability_note"
+        app:layout_constraintStart_toStartOf="@+id/tv_availability_note"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"
+        app:srcCompat="@drawable/ic_add_alert_24dp"
+        android:contentDescription="@string/add_alert" />
+
+    <TextView
+        android:id="@+id/tv_availability_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryLight"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/im_availability_indicator"
+        app:layout_constraintVertical_chainStyle="spread"
+        tools:text="@string/on_loan_alert" />
 
 </android.support.constraint.ConstraintLayout>
