--- a/app/src/main/res/layout/tracked_book_list_item.xml
+++ b/app/src/main/res/layout/tracked_book_list_item.xml
@@ -33,13 +33,13 @@
         android:id="@+id/tv_class_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/colorPrimaryLight"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_book_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_book_title"
         tools:text="Class Name, Prof. Name" />
 
     <ImageView
